--- a/Lam/contract_us.html
+++ b/Lam/contract_us.html
@@ -9,7 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- end -->
+    <!-- boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- end -->
     <link rel="stylesheet" href="css/layout.css"/>
+    <!-- FONTAWSOME -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"  />
+    <!-- end -->
 </head>
 <body>
     <header class="section header">
@@ -17,15 +25,52 @@
             Header
         </div>
     </header>
-    <nav class="section_nav">
+    <nav class="section_nav mobile-hide">
         <div><a href="#" class="blur-text">CONTACT</a></div> 
         <span><a href="#" class="overlay-text-up">LIÊN HỆ VỚI CHÚNG TÔI</a></span> 
-        <span class="overlay-text-down">THÔNG TIN XOFA CAFE & BISTRO</span> 
+        <div class="overlay-text-down">THÔNG TIN XOFA CAFE & BISTRO</div> 
     </nav>
+    <div class="section_div mobile-show">
+        <div><a href="#" class="text1">LIÊN HỆ VỚI CHÚNG TÔI</a></div> 
+        <div class="text2">THÔNG TIN XOFA CAFE & BISTRO</div> 
+    </div>
     
     <main class="section_main">
-        <div class="contact us">
-
+        <div class="contact_us">
+            <div class="row">
+                <div class="iteam1 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                  <div class="icon1">
+                    <a href="#"><i class="fa-solid fa-shop"></i></a>
+                  </div>
+                  <div class="iteamtext">
+                        AAA
+                  </div>
+                </div>
+                <div class="iteam2 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                  <div class="icon2">
+                        <a href="#"><i class="fa-regular fa-envelope"></i></a>
+                  </div>
+                  <div class="iteamtext">
+                        BBB
+                  </div>
+                </div>
+                <div class="iteam3 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                    <div class="icon1">
+                        <a href="#"><i class="fa-solid fa-phone"></i></a>
+                    </div>
+                    <div class="iteamtext">
+                    CCC
+                    </div>
+                </div>
+                <div class="iteam4 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                    <div class="icon2">
+                        <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
+                    </div>
+                    <div class="iteamtext">
+                        DDD
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <section class="section">
@@ -34,10 +79,11 @@
         </div>
     </section>
 
-    <footer class="section footer">
-        <div class="container">
+    <footer>
+       <div class="footer">
             FOOTER
-        </div>
+       </div>
     </footer>
+    <script src="https://kit.fontawesome.com/50317932e7.js" crossorigin="anonymous"></script>
 </body>
 </html>
