--- a/Lam/contract_us.html
+++ b/Lam/contract_us.html
@@ -38,45 +38,61 @@
     <main class="section_main">
         <div class="contact_us">
             <div class="row">
-                <div class="iteam1 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                <div class="iteam col-12 col-sm-6 col-xl-3 mt-3 mb-2">
                   <div class="icon1">
-                    <a href="#"><i class="fa-solid fa-shop"></i></a>
+                    <a href="https://www.google.com/maps/place/S%E1%BB%91+8+T%C3%B4n+Th%E1%BA%A5t+Thuy%E1%BA%BFt,+M%E1%BB%B9+%C4%90%C3%ACnh,+T%E1%BB%AB+Li%C3%AAm,+H%C3%A0+N%E1%BB%99i,+Vietnam/@21.0285186,105.7791064,17z/data=!3m1!4b1!4m6!3m5!1s0x313454b329f9e59f:0xb013124dd37ad2a6!8m2!3d21.0285136!4d105.7816813!16s%2Fg%2F11l6jj15kd?entry=ttu" target="_blank"><i class="fa-solid fa-shop"></i></a>
                   </div>
-                  <div class="iteamtext">
-                        AAA
+                  <span class="gachngang1 mobile-hide-gach">-------------------</span>
+                  <span class="gachngang4 mobile-show-gach">----------------------------</span>
+                  <div id="iteamtext">
+                        <h4>ĐỊA CHỈ</h4>
+                        <p>Số 8, Tôn Thất Thuyết, Mỹ Đình 2, Nam Từ Liêm, Hà Nội</p>
                   </div>
                 </div>
-                <div class="iteam2 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                <div class="iteam col-12 col-sm-6 col-xl-3 mt-3 mb-2">
                   <div class="icon2">
                         <a href="#"><i class="fa-regular fa-envelope"></i></a>
                   </div>
-                  <div class="iteamtext">
-                        BBB
+                  <span class="gachngang2 mobile-hide-gach">-------------------</span>
+                  <div id="iteamtext">
+                        <h4>EMAIL</h4>
+                        <p>nhom4@gmail.com</p>
                   </div>
                 </div>
-                <div class="iteam3 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                <div class="iteam col-12 col-sm-6 col-xl-3 mt-3 mb-2">
                     <div class="icon1">
                         <a href="#"><i class="fa-solid fa-phone"></i></a>
                     </div>
-                    <div class="iteamtext">
-                    CCC
+                    <span class="gachngang3 mobile-hide-gach">-------------------</span>
+                    <span class="gachngang5 mobile-show-gach">----------------------------</span>
+                    <div id="iteamtext">
+                        <h4>PHONE</h4>
+                        <p>024 3717 1555</p>
                     </div>
                 </div>
-                <div class="iteam4 col-12 col-sm-6 col-xl-3 mt-3 mb-2">
+                <div class="iteam col-12 col-sm-6 col-xl-3 mt-3 mb-2">
                     <div class="icon2">
                         <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
                     </div>
-                    <div class="iteamtext">
-                        DDD
+                    <div id="iteamtext">
+                        <h4>GIỜ MỞ CỬA</h4>
+                        <p>mở cả ngày</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <section class="section">
-        <div class="container">
-            SECTION
+        <div class="container-image-grid img-show"> 
+                <img src="/img/left.jpg" class="full-width-image">
+                <div class="map"><iframe width="600" height="550"  frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
+                <img src="/img/right.jpg" class="full-width-image">
         </div>
+        <div class="container-image img-hide"> 
+            <img src="/img/left.jpg" class="full-width-image1">
+            <div class="map1"><iframe width="550" height="550" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
+        </div>
+        <div><iframe class="map-full img-moblie-hide" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
     </section>
 
     <footer>
