--- a/Huy/test.html
+++ b/Huy/test.html
@@ -2,60 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thực đơn Cà Phê</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Coffee Shop</title>
+    <!-- Link đến Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- Custom CSS -->
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f8f8f8;
+            background-color: #f8f9fa;
         }
-
-        .menu-container {
-            width: 300px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+        .jumbotron {
+            background-image: url('path/to/coffee-background.jpg');
+            background-size: cover;
+            color: white;
+            text-align: center;
+            padding: 100px;
+            margin-bottom: 0;
         }
-
-        .coffee-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 0;
-            border-bottom: 1px dashed #ccc;
-        }
-
-        .coffee-name {
-            font-weight: bold;
-        }
-
-        .price {
-            color: #6e6e6e;
+        .menu-item {
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="menu-container">
-        <div class="coffee-item">
-            <span class="coffee-name">Cà Phê Espresso</span>
-            <span class="price">$2.50</span>
-        </div>
-        <div class="coffee-item">
-            <span class="coffee-name">Cà Phê Latte</span>
-            <span class="price">$3.00</span>
-        </div>
-        <div class="coffee-item">
-            <span class="coffee-name">Cà Phê Americano</span>
-            <span class="price">$2.75</span>
-        </div>
-        <!-- Thêm các mục cà phê khác tại đây -->
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Coffee Shop</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#menu">Menu</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#about">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+            </li>
+        </ul>
     </div>
+</nav>
+
+<!-- Jumbotron -->
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to our Coffee Shop</h1>
+    <p class="lead">Enjoy the finest coffee in town.</p>
+</div>
+
+<!-- Menu Section -->
+<div class="container" id="menu">
+    <h2 class="text-center mb-4">Menu</h2>
+    <div class="row">
+        <div class="col-md-4 menu-item">
+            <img src="path/to/coffee1.jpg" alt="Coffee 1" class="img-fluid">
+            <h4>Espresso</h4>
+            <p>Strong and concentrated coffee.</p>
+        </div>
+        <div class="col-md-4 menu-item">
+            <img src="path/to/coffee2.jpg" alt="Coffee 2" class="img-fluid">
+            <h4>Cappuccino</h4>
+            <p>Espresso mixed with steamed milk and foam.</p>
+        </div>
+        <div class="col-md-4 menu-item">
+            <img src="path/to/coffee3.jpg" alt="Coffee 3" class="img-fluid">
+            <h4>Americano</h4>
+            <p>Espresso with added hot water.</p>
+        </div>
+    </div>
+</div>
+
+<!-- About Us Section -->
+<div class="container" id="about">
+    <h2 class="text-center mb-4">About Us</h2>
+    <p>Our Coffee Shop is dedicated to providing the best coffee experience to our customers. With a passion for quality and a love for coffee, we source the finest beans and carefully craft each cup to perfection.</p>
+</div>
+
+<!-- Contact Section -->
+<div class="container" id="contact">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <p>If you have any questions or inquiries, feel free to reach out to us:</p>
+    <p>Email: info@coffeeshop.com</p>
+    <p>Phone: +1 (123) 456-7890</p>
+</div>
+
+<!-- Link đến Bootstrap JS và Popper.js -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
