--- a/contact_us.html
+++ b/contact_us.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- end -->
-    <link rel="stylesheet" href="css/layout.css"/>
+    <link rel="stylesheet" href="css/contactus.css"/>
     <!-- FONTAWSOME -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"  />
@@ -84,12 +84,12 @@
     </main>
     <section class="section">
         <div class="container-image-grid img-show"> 
-                <img src="/img/left.jpg" class="full-width-image">
+                <img src="image/left.jpg" class="full-width-image">
                 <div class="map"><iframe width="600" height="550"  frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
-                <img src="/img/right.jpg" class="full-width-image">
+                <img src="image/right.jpg" class="full-width-image">
         </div>
         <div class="container-image img-hide"> 
-            <img src="/img/left.jpg" class="full-width-image1">
+            <img src="image/left.jpg" class="full-width-image1">
             <div class="map1"><iframe width="550" height="550" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
         </div>
         <div><iframe class="map-full img-moblie-hide" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
