--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XOFA Cafe Bistro - Về Chúng Tôi</title>
-  <link rel="stylesheet" href="aboutus.css"/>
+  <link rel="stylesheet" href="css/aboutus.css"/>
 </head>
 <body>
   <script src="https://kit.fontawesome.com/50317932e7.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
         <div class="anh">
           <h1 class="text">VỀ CHÚNG TÔI</h1>
           <p class="text" style="margin-top: 145px; margin-left: 275px ; font-size: 18px;"> Trang chủ > Về chúng tôi</p>
-          <p style="width: 100%; height: 100%;"><img class="im" src="images/download.jfif"></p>
+          <p style="width: 100%; height: 100%; "><img class="im" src="image/ca-phe-moc-711x400.jpg"></p>
         </div>
         <div class="ht">
           <h1>XOFA CAFE & BISTRO</h1>
@@ -44,8 +44,8 @@
           <h1 class="text3" style="color: rgb(46, 146, 46); font-size: 18px;">XOFA CAFE & BISTRO</h1>
           <h2 class="text3" style="line-height: 1.3; margin-top: 50px; font-size: 30px; color: #4b371c;">CHÚNG TÔI ĐEM TỚI KHÁCH HÀNG NHỮNG ĐIỀU TỐT NHẤT</h2>
           <p class="text3" style="margin-top: 220px; line-height: 1.5; font-size: 17px;">Dù là một thương hiệu trẻ nhưng Xofa cố gắng để đem tới cho khách hàng những dịch vụ tốt nhất. Đồ uống tại Xofa luôn có dấu ấn riêng với nguyên liệu tốt nhất, đồ ăn được chế biến bởi những đầu biếp chuyên nghiệp,…Những bộ bàn ghế, ly, cốc đều được thiết kế riêng, phù hợp từng loại đồ uống riêng đem tới trải nghiệm tốt nhất cho khách hàng.</p>
-          <p style="width: 60%; margin-top: 130px;"><img class="dp" src="images/dong-phuc-nhan-vien-quan-cafe.jpg"></p>
-          <p style="width: 50%; margin-left: 517px; margin-top: 200px;"><img src="images/Screenshot (3).png"></p>
+          <p style="width: 60%; margin-top: 130px;"><img class="dp" src="image/dong-phuc-nhan-vien-quan-cafe.jpg"></p>
+          <p style="width: 50%; margin-left: 517px; margin-top: 200px;"><img src="image/Screenshot (3).png"></p>
         </div>
         <div class="on">
           <div class="on1">
@@ -90,7 +90,7 @@
               <p class="text7" style="margin-top: 360px;">Quá trình ngâm ủ cà phê sẽ giúp làm giảm sự di chuyển của các hạt cà phê cực nhỏ xuống đáy</p>
             </div>
           </div>
-          <p style="margin-top: 330px;"><img class="bg" src="images/plain-black-background-02fh7564l8qq4m6d.jpg"/></p>
+          <p style="margin-top: 330px;"><img class="bg" src="image/plain-black-background-02fh7564l8qq4m6d.jpg"/></p>
         </div>
         <div class="tongquan">
           <div class="tq">
@@ -111,10 +111,10 @@
               <p class="text9"> Hương vị Thơm ngon - Đậm vị hàng đầu tại Việt Nam</p>
             </div>
           </div>
-          <p style="width: 38%; height: 38%; margin-top: 200px;"><img src="images/273385854_5171471272883362_4950349239126699802_n-1024x1024.jpg"></p>
+          <p style="width: 38%; height: 38%; margin-top: 200px;"><img src="image/273385854_5171471272883362_4950349239126699802_n-1024x1024.jpg"></p>
         </div>
         <div class="end">
-          <p style="position: relative; margin-top: 750px; width: 100%; height: 100%; margin-left: 50px; "><img src="images/Screenshot (4).png"></p>
+          <p style="position: relative; margin-top: 750px; width: 100%; height: 100%; margin-left: 50px; "><img src="image/Screenshot (4).png"></p>
           <p style="margin-left: 550px; font-size: 18px; font-weight: 700; color: #4b371c; position: absolute;">SHARE THIS:</p>
           <div class="fb">
             <a href="#" class="text10"><i class="fab fa-facebook-f" style="text-align: center; margin: 9px; "></i></a>
@@ -136,7 +136,7 @@
           <i class="fas fa-phone" style="position: absolute; margin-top: 120px; margin-left: 80px; color: white;"> 021309012931</i>
           <h2 class="text2" style="margin-top: 150px;"> Email:</h2>
           <i class="fas fa-envelope" style="position: absolute; margin-top: 180px; margin-left: 80px; color: white; font-weight: 400;"> aowdjaowdja@gmai.com</i>
-          <p style="width: 61%;"><img class="im" src="images/coffee-bean-background-beans-roasted-to-perfection-an-ideal-texture-for-backgrounds_9945961.jpg!w700wp"/></p>
+          <p style="width: 61%;"><img class="im" src="image/coffee-bean-background-beans-roasted-to-perfection-an-ideal-texture-for-backgrounds_9945961.jpg!w700wp"/></p>
         </div>
       </div>
       <style>
