--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="section header">
         <div class="mobi" id="mobie">
             <ul>
                 <i style="float: right; font-size: 30px; padding-right: 10px;" onclick="sextoy()" class="fa-solid fa-x" ></i>
