--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOME</title>
    
 
     <!-- trangchucss -->
@@ -49,11 +49,11 @@
             <ul>
                 <i style="float: right; font-size: 30px; padding-right: 10px;" onclick="sextoy()" class="fa-solid fa-x" ></i>
                 <img style="width: 90%; " src="image/xofa-black.png"/>
-                <li><a href="" id="linksex" style="font-weight: 700; color: rgb(155, 90, 5);" >TRANG CHỦ</a></li>
-                <li><a href="" id="linksex">Về XOFA</a></li>
+                <li><a href="index.html" id="linksex" style="font-weight: 700; color: rgb(155, 90, 5);" >TRANG CHỦ</a></li>
+                <li><a href="/aboutus.html" id="linksex">Về XOFA</a></li>
                 <li><a href="" id="linksex">MENU</a></li>
                 <li><a href="" id="linksex">FAQ</a></li>
-                <li><a href="" id="linksex">LIÊN HỆ</a></li>
+                <li><a href="contact_us.html" id="linksex">contact</a></li>
                 <li><a href="" id="linksex">ENLISH</a></li>
             </ul>
 
@@ -69,9 +69,9 @@
                 <ul id="menu">
                     <li><a href="" id="link" style="color: rgb(173, 106, 11); font-weight: 500;">TRANG CHỦ</a></li>
                     <li><a href="" id="link">Về XOFA</a></li>
-                    <li><a href="" id="link">MENU</a></li>
+                    <li><a href="/menu.html" id="link">MENU</a></li>
                     <li><a href="" id="link">FAQ</a></li>
-                    <li><a href="" id="link">LIÊN HỆ</a></li>
+                    <li><a href="contact_us.html" id="link">LIÊN HỆ</a></li>
                     <li><a href="" id="link">ENLISH</a></li>
                 </ul>
             </div>
