--- a/contact_us.html
+++ b/contact_us.html
@@ -39,7 +39,7 @@
 </head>
 <body>
      <!-- header -->
-     <header class="section header" >
+     <header class="section header" style="min-height: 40vh;"  >
         <div class="mobi" id="mobie">
             <ul>
                 <i style="float: right; font-size: 30px; padding-right: 10px;" onclick="sextoy()" class="fa-solid fa-x" ></i>
