--- a/contact_us.html
+++ b/contact_us.html
@@ -42,7 +42,7 @@
 
      
 
-     <header class="section header" style="min-height: 40vh; background-image: url();"  >
+     <header class="section header" style="min-height: 40vh;   background-image: linear-gradient(0,rgba(64, 34, 24,0.651),rgba(64, 34, 24, 0.651)) ,url(/image/banner.jpg) ;"  >
 
         <div class="mobi" id="mobie">
             <ul>
