--- a/contact_us.html
+++ b/contact_us.html
@@ -39,17 +39,17 @@
 </head>
 <body>
      <!-- header -->
-     <header class="section header" style="min-height: 40vh;"  >
+     <header class="section header" style="min-height: 50vh; background-image:url(image/head.jpg); background-size: cover; background-position: center;">
         <div class="mobi" id="mobie">
             <ul>
                 <i style="float: right; font-size: 30px; padding-right: 10px;" onclick="sextoy()" class="fa-solid fa-x" ></i>
                 <img style="width: 90%; " src="image/xofa-black.png"/>
-                <li><a href="" id="linksex" style="font-weight: 700; color: rgb(155, 90, 5);" >TRANG CHỦ</a></li>
-                <li><a href="" id="linksex">Về XOFA</a></li>
-                <li><a href="" id="linksex">MENU</a></li>
-                <li><a href="" id="linksex">FAQ</a></li>
-                <li><a href="" id="linksex">LIÊN HỆ</a></li>
-                <li><a href="" id="linksex">ENLISH</a></li>
+                <li><a href="index.html" id="linksex">TRANG CHỦ</a></li>
+                <li><a href="aboutus.html" id="linksex">Về XOFA</a></li>
+                <li><a href="menu.html" id="linksex">MENU</a></li>
+                <li><a href="FAQ.html" id="linksex">FAQ</a></li>
+                <li><a href="contact_us.html" id="linksex" style="font-weight: 700; color: rgb(155, 90, 5);">LIÊN HỆ</a></li>
+                <li><a href="#" id="linksex">ENLISH</a></li>
             </ul>
 
         </div>
@@ -62,12 +62,12 @@
             <div class="iteam1" ><img style="width: 230px;  " src="/image/icon.png"/></div>
             <div class="iteam2">
                 <ul id="menu">
-                    <li><a href="" id="link" style="color: rgb(173, 106, 11); font-weight: 500;">TRANG CHỦ</a></li>
-                    <li><a href="" id="link">Về XOFA</a></li>
-                    <li><a href="" id="link">MENU</a></li>
-                    <li><a href="" id="link">FAQ</a></li>
-                    <li><a href="" id="link">LIÊN HỆ</a></li>
-                    <li><a href="" id="link">ENLISH</a></li>
+                    <li><a href="index.html" id="link">TRANG CHỦ</a></li>
+                    <li><a href="aboutus.html" id="link">Về XOFA</a></li>
+                    <li><a href="menu.html" id="link">MENU</a></li>
+                    <li><a href="FAQ.html" id="link">FAQ</a></li>
+                    <li><a href="contact_us.html" id="link" style="color: rgb(173, 106, 11); font-weight: 500;">LIÊN HỆ</a></li>
+                    <li><a href="#" id="link">ENLISH</a></li>
                 </ul>
             </div>
             <div class="iteam3">
@@ -79,9 +79,9 @@
                 </div>
             </div>
         </div>
-        <div class="section_nav">
-            <div>LIÊN HỆ</div>              
-            <div>Trang chủ > Liên Hệ</div>
+        <div class="section_nav" style="margin-top: 45px;">
+            <div><a href="contact_us.html" class="Lienhe">LIÊN HỆ</a></div>              
+            <div><a href="index.html" class="sup">Trang chủ</a><a href="contact_us.html" class="sup"> <span class="sup" style="color: rgb(155, 106, 15);">></span> Liên Hệ </a></div>
         </div>
 
     </header>
@@ -101,12 +101,12 @@
     </script>
     <!-- header -->
     <nav class="section_nav mobile-hide">
-        <div><a href="#" class="blur-text">CONTACT</a></div> 
-        <span><a href="#" class="overlay-text-up">LIÊN HỆ VỚI CHÚNG TÔI</a></span> 
+        <div><a href="contact_us.html" class="blur-text">CONTACT</a></div> 
+        <span><a href="contact_us.html" class="overlay-text-up">LIÊN HỆ VỚI CHÚNG TÔI</a></span> 
         <div class="overlay-text-down">THÔNG TIN XOFA CAFE & BISTRO</div> 
     </nav>
     <div class="section_div mobile-show">
-        <div><a href="#" class="text1">LIÊN HỆ VỚI CHÚNG TÔI</a></div> 
+        <div><a href="contact_us.html" class="text1">LIÊN HỆ VỚI CHÚNG TÔI</a></div> 
         <div class="text2">THÔNG TIN XOFA CAFE & BISTRO</div> 
     </div>
     
@@ -157,7 +157,7 @@
             </div>
         </div>
     </main>
-    <section class="section">
+    <section class="section" style="padding-bottom: 100px;">
         <div class="container-image-grid img-show"> 
                 <img src="image/left.jpg" class="full-width-image">
                 <div class="map"><iframe width="600" height="550"  frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.712944203182!2d105.7814162!3d21.0284995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abf1b3e8c4f5%3A0x1f4b1e8d7d5c2f7d!2sYour%20Location!5e0!3m2!1sen!2sin!4v1636437305075!5m2!1en!2sin" allowfullscreen></iframe></div>
