--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <i style="float: right; font-size: 30px; padding-right: 10px;" onclick="sextoy()" class="fa-solid fa-x" ></i>
                 <img style="width: 90%; " src="image/xofa-black.png"/>
                 <li><a href="index.html" id="linksex" style="font-weight: 700; color: rgb(155, 90, 5);" >TRANG CHỦ</a></li>
-                <li><a href="/aboutus.html" id="linksex">Về XOFA</a></li>
+                <li><a href="aboutus.html" id="linksex">Về XOFA</a></li>
                 <li><a href="" id="linksex">MENU</a></li>
                 <li><a href="" id="linksex">FAQ</a></li>
                 <li><a href="contact_us.html" id="linksex">contact</a></li>
