--- a/FAQ.html
+++ b/FAQ.html
@@ -267,8 +267,12 @@
                 <div class="progress-bar bg-danger" style="width: 99%"></div>
               </div>
         </div>
-</section>
+    </section>
+    <section>
 
+    <!-- Chú viết nốt lần cuối ở đây -->
+
+    </section>
         <!-- foter -->
         <footer>
             <div class="img" >
