--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"  />
     <!-- footer  -->
+    <script src="https://kit.fontawesome.com/50317932e7.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     
@@ -65,7 +67,7 @@
             </div>
         </div>
         <div class="contrainer1">
-           <div class="mot" >
+           <!-- <div class="mot" >
                 <p style="font-weight: 400; font-size: 20px;"  > XOFA CAFÉ & BISTRO</p><br>
                 <p style="font-size: 45px; padding-right: 20px;"><b>KHUNG CẢNH BÌNH YÊN <br> GÓC SÂN CHÌM ĐẮM NẮNG VÀNG</b></p>
                 <p style="margin-top: 20px;">Tại một góc nhỏ yên tĩnh bên khung cửa sổ, bạn được đánh thức bằng hương cà phê ấm nồng, vươn mình đón những tia nắng cuối <br> hè cùng làn gió thu khoan khoái, chào đón một ngày mới bình yên!
@@ -77,7 +79,15 @@
            </div>
            <div class="hai" >
                     <p class="ditmewibi" ><b>XOFA CAFÉ & BISTRO</b></p>
-           </div>
+           </div> -->
+            <div class="top">
+                <h1 style="color: white;font-size: 50px;text-align: center;font-weight: 750;">MENU</h1>
+            </div>
+            <div class="bottom">
+                <a href="index.html" style="color: white;">Trang chủ</a>
+                <i class="fa-solid fa-chevron-up fa-rotate-90" style="color: #9e522a; margin:0 10px;"></i>
+                <a href="menu.html" style="color: white;">Menu</a>
+            </div>
            
         </div>
 
