--- a/menu.html
+++ b/menu.html
@@ -80,10 +80,10 @@
            <div class="hai" >
                     <p class="ditmewibi" ><b>XOFA CAFÉ & BISTRO</b></p>
            </div> -->
-            <div class="top">
+            <div class="phan_tren">
                 <h1 style="color: white;font-size: 50px;text-align: center;font-weight: 750;">MENU</h1>
             </div>
-            <div class="bottom">
+            <div class="phan_duoi">
                 <a href="index.html" style="color: white;">Trang chủ</a>
                 <i class="fa-solid fa-chevron-up fa-rotate-90" style="color: #9e522a; margin:0 10px;"></i>
                 <a href="menu.html" style="color: white;">Menu</a>
