--- a/FAQ.html
+++ b/FAQ.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>
-        <div class="section_nav" style="margin-top: 45px;">
+        <div class="section_nav" >
             <div><a href="#" class="Lienhe">CÂU HỎI THƯỜNG GẶP</a></div>              
             <div><a href="#" class="sup">Trang chủ</a><a href="#" class="sup"> <span class="sup" style="color: rgb(155, 106, 15);">></span> Câu Hỏi Thường Gặp </a></div>
         </div>
@@ -389,7 +389,7 @@
                         </div>
                         <div class="iteamchu">
                             <p><b>EMAIL</b></p>
-                            <p>hentai@gmail.com</p>
+                            <p>nhom4@gmail.com</p>
                         </div>
                     </div>
                     <div class="iteam" >
@@ -420,7 +420,7 @@
                         <p>Tại Xofa <br>  nơi yên ấm của bất tận yêu thương, bạn có muốn cùng nâng ly và sẻ chia những câu chuyện hành trình đầy cảm xúc?</p>
                         <button onclick="window.location.href=''"><i class="fa-brands fa-facebook"></i></button>
                         <button onclick="window.location.href=''"><i class="fa-brands fa-twitter"></i></button>
-                        <button onclick="window.location.href='https://hentaiz.vc/'"><i class="fa-solid fa-cat"></i></button>
+                        <button onclick="window.location.href=''"><i class="fa-solid fa-cat"></i></button>
                     </div>
                     <div class="haiiteam2" >
                         <p id="dau"><b>ĐIỀU KHOẢN</b></p>
@@ -449,7 +449,7 @@
         
                 </div>
                 <div class="ba">
-                    <p>Bản quyền thuộc về team Sẽ Gầy & Súc Vật </p>
+                    <p>Bản quyền thuộc về team 4 </p>
                     <p>Bản quyền © 2023. Mọi quyền được bảo lưu. </p>
     
                 </div>
